# opencl_alg

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
OpenCL_alg/: CMakeLists.txt
OpenCL_alg/includes/: CLApp.hpp  cpu_helper_functions.hpp
OpenCL_alg/sources/: CLApp.cpp  main.cpp
